[package]
name = "helixitty"
description = "Alacritty as a shell for Helix editor"
version = "0.1.0"
edition = "2021"
authors = ["kaoru <k@warpnine.io>"]
license = "MIT"
homepage = "https://github.com/0x6b/helixitty"
repository = "https://github.com/0x6b/helixitty"
readme = "README.md"
categories = ["text-processing"]
keywords = ["helix", "alacritty", "UI"]
default-run = "helixitty-builder"

[[bin]]
name = "helixitty-builder"
path = "src/main.rs"

[dependencies]
# Command line argument parsing
clap = { version = "4.4.16", features = ["derive", "env"] }

# Recursively copy files
fs_extra = "1.3.0"

# Generate icons from SVG
resvg = "0.37.0"
tiny-skia = "0.11.3"
usvg = "0.37.0"

# Generate info.plist
apple-bundle = "0.1.4"
